apps/production/sonarr/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: arr
spec:
  tls:
    - hosts:
        - &host sonarr.fanen.dk
      secretName: sonarr-fanen-dk-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  name: http
