apps/production/sonarr/route-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-route
  namespace: sonarr
spec:
  hostnames:
    - sonarr.fanen.dk
